# Trabajo-Practico-1-POO

./: .gitignore  CMakeLists.txt  elementos.cpp  elementos.h  jugador.cpp  jugador.h  main.cpp  matriz_de_daños_xd.cpp  matrizdanio.cpp  partida.cpp  partida.h  tabladedanios.h
